feat: 新增行動版導覽列漢堡選單功能，優化管理員介面課程與使用者列表佈局及樣式，並移除使用者刪除按鈕

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=student_fix">
 
     <!-- Firebase SDKs (Compat version for easier standalone usage or Modular) -->
     <!-- Using Modular from CDN for modern conveniences -->
@@ -27,7 +27,7 @@
     <script src="https://www.youtube.com/iframe_api"></script>
 
     <!-- Scripts -->
-    <script type="module" src="app.js"></script>
+    <script type="module" src="app.js?v=student_fix"></script>
 </body>
 
 </html>
