Fix login modal, add cancel button, and update text labels

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css?v=student_fix">
+    <link rel="stylesheet" href="style.css?v=login_fix_v1">
 
     <!-- Firebase SDKs (Compat version for easier standalone usage or Modular) -->
     <!-- Using Modular from CDN for modern conveniences -->
@@ -28,7 +28,7 @@
     <script src="https://www.youtube.com/iframe_api"></script>
 
     <!-- Scripts -->
-    <script type="module" src="app.js?v=student_fix"></script>
+    <script type="module" src="app.js?v=login_fix_v1"></script>
 </body>
 
 </html>
