--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css?v=login_fix_v2">
+    <link rel="stylesheet" href="style.css?v=login_fix_v3">
 
     <!-- Firebase SDKs (Compat version for easier standalone usage or Modular) -->
     <!-- Using Modular from CDN for modern conveniences -->
@@ -28,7 +28,8 @@
     <script src="https://www.youtube.com/iframe_api"></script>
 
     <!-- Scripts -->
-    <script type="module" src="app.js?v=login_fix_v2"></script>
+    <script type="module" src="app.js?v=login_fix_v3"></script>
+    </script>
 </body>
 
 </html>
