--- a/dashboard_demo.html
+++ b/dashboard_demo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Behavioral-Interest Dashboard Demo</title>
     <!-- Use Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <link href="./fonts/google-fonts.css" rel="stylesheet">
     <style>
         :root {
             --bg-color: #0f172a;
