--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
     <title>線上教育訓練系統</title>
     <link rel="icon" type="image/png" href="images/favicon.png">
     <!-- Google Fonts: Noto Sans TC -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap"
-        rel="stylesheet">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <link href="./fonts/google-fonts.css" rel="stylesheet">
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css?v=login_fix_v3">
@@ -34,11 +33,11 @@
     </div>
 
     <!-- YouTube IFrame API -->
-    <script src="https://www.youtube.com/iframe_api"></script>
+    <script src="./lib/youtube_iframe_api.js"></script>
 
     <!-- Scripts -->
-    <script type="module" src="app.js?v=login_fix_v3"></script>
-    </script>
+    <script type="module" src="app.js?v=debug_fix"></script>
+
 </body>
 
 </html>
